# AMA-server

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  openAPI.json  pyproject.toml
.claude/commands/: implement-module.md  module-done.md
alembic/: env.py
alembic/versions/: 1430b8e61515_add_missing_columns_to_fraud_detection.py  1cb0ebeb16f1_add_face_reference_table.py  495dabd80749_update_device_model_for_multi_device_.py  5072b8ca88f8_create_business_and_gis_schemas.py  6b9d84669f48_add_notification_and_notification_.py  7239ba51b5c2_correct_two_floor_main_office_mock.py  c2495ccaca1b_seed_mock_business_and_gis_data.py  ded99b0669c2_update_gis_mock_to_uit_building_a.py  e8509aa02ee1_extend_attendance_record_add_new_columns.py
app/: main.py
app/api/: dependencies.py
app/core/: config.py  database.py  security.py  storage.py
app/models/: __init__.py  business.py  gis.py  item.py  user.py
app/repositories/: admin_repository.py  attendance_repository.py  audit_repository.py  auth_repository.py  face_repository.py  fraud_repository.py  geofence_repository.py  item_repository.py  notification_repository.py  report_repository.py  user_repository.py
app/schemas/: admin.py  attendance.py  audit.py  auth.py  common.py  face.py  (+6 more)
dev_docs/: API_IMPLEMENTATION_CHECKLIST.md  FULL_API_DOCS.md  SWAGGER_MANUAL_TEST_DATA.md  arcgis_validation.md
testing/: README.md  ama_hq_arcgis.html  gis_view.html  seed_dev_accounts.py  seed_gis_demo.py  uit_building_a_footprint.geojson  uit_building_a_gis_data.json
tests/: conftest.py
(+86 files in other folders)
