[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "mediapipe>=0.10.0",
    "minio>=7.2.0",
    "Pillow>=10.0.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]
